<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".mvvmi.LocationActivity"
    android:id="@+id/mainConstraintLayout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/location_manager_last_known_card"
            style="@style/Widget.MaterialComponents.CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0"
            app:cardElevation="5dp"
            app:cardMaxElevation="5dp"
            app:cardBackgroundColor="@color/colorPrimaryDark"
            app:cardCornerRadius="5dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/location_manager_last_known_card_title"
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location_manager_provider"/>

                <TextView
                    android:id="@+id/location_manager_last_known_card_api"
                    style="@style/TextAppearance.MaterialComponents.Subtitle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location_manager_last_known_location_api"/>

                <TextView
                    android:id="@+id/location_manager_last_known_card_status"
                    style="@style/TextAppearance.MaterialComponents.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location_not_requested"/>

                <TextView
                    android:id="@+id/location_manager_last_known_card_location"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/default_location_txt"/>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/location_manager_single_update_card"
            style="@style/Widget.MaterialComponents.CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/location_manager_last_known_card"
            app:layout_constraintVertical_bias="0"
            app:cardElevation="5dp"
            app:cardMaxElevation="5dp"
            app:cardBackgroundColor="@color/colorPrimaryDark"
            app:cardCornerRadius="5dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/location_manager_single_update_card_title"
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location_manager_provider"/>

                <TextView
                    android:id="@+id/location_manager_single_update_card_api"
                    style="@style/TextAppearance.MaterialComponents.Subtitle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location_manager_request_single_update_api"/>

                <TextView
                    android:id="@+id/location_manager_single_update_card_status"
                    style="@style/TextAppearance.MaterialComponents.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location_not_requested"/>

                <TextView
                    android:id="@+id/location_manager_single_update_card_location"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/default_location_txt"/>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/location_manager_multiple_updates_card"
            style="@style/Widget.MaterialComponents.CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/location_manager_single_update_card"
            app:layout_constraintVertical_bias="0"
            app:cardElevation="5dp"
            app:cardMaxElevation="5dp"
            app:cardBackgroundColor="@color/colorPrimaryDark"
            app:cardCornerRadius="5dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/location_manager_multiple_updates_title"
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location_manager_provider"/>

                <TextView
                    android:id="@+id/location_manager_multiple_updates_card_api"
                    style="@style/TextAppearance.MaterialComponents.Subtitle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location_manager_request_location_updates_api"/>

                <TextView
                    android:id="@+id/location_manager_multiple_updates_card_status"
                    style="@style/TextAppearance.MaterialComponents.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location_not_requested"/>

                <TextView
                    android:id="@+id/location_manager_multiple_updates_card_location"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/default_location_txt"/>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/fused_location_provider_last_known_card"
            style="@style/Widget.MaterialComponents.CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/location_manager_multiple_updates_card"
            app:layout_constraintVertical_bias="0"
            app:cardElevation="5dp"
            app:cardMaxElevation="5dp"
            app:cardBackgroundColor="@color/colorPrimaryDark"
            app:cardCornerRadius="5dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/fused_location_provider_last_known_card_title"
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fused_location_provider"/>

                <TextView
                    android:id="@+id/fused_location_provider_last_known_card_api"
                    style="@style/TextAppearance.MaterialComponents.Subtitle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fused_location_provider_get_last_location_api"/>

                <TextView
                    android:id="@+id/fused_location_provider_last_known_card_status"
                    style="@style/TextAppearance.MaterialComponents.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location_not_requested"/>

                <TextView
                    android:id="@+id/fused_location_provider_last_known_card_location"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/default_location_txt"/>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/fused_location_provider_multiple_updates_card"
            style="@style/Widget.MaterialComponents.CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fused_location_provider_last_known_card"
            app:layout_constraintVertical_bias="0"
            app:cardElevation="5dp"
            app:cardMaxElevation="5dp"
            app:cardBackgroundColor="@color/colorPrimaryDark"
            app:cardCornerRadius="5dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/fused_location_provider_multiple_updates_card_title"
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fused_location_provider"/>

                <TextView
                    android:id="@+id/fused_location_provider_multiple_updates_card_api"
                    style="@style/TextAppearance.MaterialComponents.Subtitle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fused_location_provider_location_updates_api"/>

                <TextView
                    android:id="@+id/fused_location_provider_multiple_updates_card_status"
                    style="@style/TextAppearance.MaterialComponents.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location_not_requested"/>

                <TextView
                    android:id="@+id/fused_location_provider_multiple_updates_card_location"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/default_location_txt"/>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/get_location_btn"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_mylocation"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintVertical_bias="0.025"

            android:elevation="10dp"
            app:elevation="10dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>